test/vlt/01-syntax/inv_properties/inv_properties.ml
let () = [%debug_log "msg" [%PROPERTIES 0]]
